syntax = "proto3";

package info.skyblond.archivedag.group;

option java_multiple_files = true;
option java_package = "info.skyblond.archivedag.protos.group";

import "info/skyblond/archivedag/protos/common.proto";

message GroupRequestMessage {
  string group_name = 1;
  string username = 2;
  uint32 page = 3;
  uint32 size = 4;
}

message GroupDetail {
  string group_name = 1;
  string owner = 2;
  uint64 created_timestamp = 3;
}

message GroupNameList {
  repeated string group_name = 1;
}

service GroupService {
  // require: group_name and username, the username will be the group owner
  rpc CreateGroup (GroupRequestMessage) returns (common.Empty);
  // require: group_name
  rpc DeleteGroup (GroupRequestMessage) returns (common.Empty);
  // require: group_name
  rpc QueryGroup (GroupRequestMessage) returns (GroupDetail);
  // require: group_name and username, the username will be the new owner
  rpc TransferGroup (GroupRequestMessage) returns (common.Empty);
  // require: group_name and username, the username will be the new member
  rpc JoinGroup (GroupRequestMessage) returns (common.Empty);
  // require: group_name and username, the username will be the leaving member
  rpc LeaveGroup (GroupRequestMessage) returns (common.Empty);
  // require: username
  rpc ListOwnedGroup (GroupRequestMessage) returns (GroupNameList);
  // require: username
  rpc ListJoinedGroup (GroupRequestMessage) returns (GroupNameList);
  // require: group_name, it can be part of the name
  rpc ListGroupName (GroupRequestMessage) returns (GroupNameList);
}
