syntax = "proto3";

package ariteg;

option java_multiple_files = true;
option java_package = "info.skyblond.ariteg";

enum ObjectType {
  BLOB = 0;
  LIST = 1;
  TREE = 2;
  COMMIT = 3;
}

message AritegLink {
  // name of the link
  // it's useful to know the type before actually read the data
  string name = 1;
  // multihash of target
  bytes multihash = 2;
  // type of this link
  ObjectType type = 3;
}

// Commit data for commit object
message CommitData {
  // parent of this commit
  AritegLink parent = 1;
  // link of committed object
  AritegLink committedObject = 2;
  // unix timestamp of this
  uint64 unix_timestamp = 3;
  // commit message
  string message = 4;
  // author
  AritegLink author = 5;
}

message AritegObject {
  // Type of this object
  ObjectType type = 1;
  // blob data content
  bytes data = 2;
  // list, tree links
  repeated AritegLink links = 3;
  // commit data
  CommitData commit_data = 4;
}
